using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStates
{
    public const string SpaceJump_Jump = "Jumping";

    public const string CoinPickup = "CoinPickup";

    public const string PetMove = "walk";

    public const string PetStop = "stop";

    public const string PetHappy = "happy";
    public const string PetSad = "sad";
    public const string PetSit = "sit";
}
